# two-photon

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  Singularity  artefacts.py  artefacts_test.py  docker-compose.yml  docker_rip.sh  docker_run.sh  environment-full.yml  environment.dev.yml  environment.yml  metadata.py  preprocess.py  process.py  pyproject.toml  rip.py  rip.sbatch  rip_docker.sh  rip_singularity.sh  runscript.sh  setup.cfg  singularity_rip.sh  tiffdata.py  transform.py  two-photon.code-workspace  two-photon.def
Prairie View 5.5/Utilities/: config.ini
Prairie View/5.4.64.100/Utilities/: HWiNFO64.INI  PrairieLink.html  diag_rawImageConverterException.txt
Prairie View/5.4.64.200/Utilities/: diag_rawImageConverterException.txt
Prairie View/5.5.64.100/Utilities/: HWiNFO64.INI
Prairie View/Utilities/: HWiNFO64.INI
container/: runscript.sh  two-photon.def
docker-wine/: README.md  docker-wine
notebooks/: analysis.ipynb  check_artefact_removal.ipynb
prairie_view/5.3.64.309/Utilities/: HWiNFO64.INI
singularity/: Singularity  runscript.sh
tests/: conftest.py  test_artefact_detect.py  test_artefacts.py  test_correct_omexml.py  test_interpolate.py  test_preprocess.py  test_raw2tiff.py
tests/testdata/: correct_onexml.expected.xml  correct_onexml.original.xml  frame_start.tsv  frame_start_piezo.tsv  frame_start_settle.tsv  stim.tsv  stim_1_0.tsv  stim_1_2.tsv  voltage_recording.h5
two-photon/: artefacts.py  artefacts_test.py  backup_session.py  common_lib.py  process.py  rip.py  rip_test.py  tiff_to_hdf5.py  transform.py
two_photon/: analyze.py  artefact_detect.py  artefacts.py  backup.py  cli.py  convert.py  correct_omexml.py  interpolate.py  layout.py  metadata.py  preprocess.py  process.py  qa.py  raw2tiff.py  remove_stim_artefact.py  tiff2hdf5.py  tiffdata.py  transform.py  utils.py
two_photon/ops_files/: drinnedb.json
(+2 files in other folders)
