[metadata]
name = two_photon
version = 0.0.1
author = Chris Roat
author_email = croat@stanford.edu
# license_files = LICENSE
description = Scripts for processing two-photon data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deisseroth-lab/two-photon
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    two_photon
python_requires = >=3.6
install_requires = 
    click
entry_points=
    [console_scripts]
    two-photon=two_photon.cli:cli

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html
# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
exclude = __init__.py
extend-ignore =
    E20,   # Extra space in brackets
    E731,  # Assigning lambda expression
    W503,  # line break before binary operator
max-line-length = 120

[isort]
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
