[metadata]
name = two_photon
version = 0.0.1
author = Chris Roat
author_email = croat@stanford.edu
# license_files = LICENSE
description = Scripts for processing two-photon data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deisseroth-lab/two-photon
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    two_photon
python_requires = >=3.6
install_requires = 
    click
    click-pathlib
entry_points=
    [console_scripts]
    2p=two_photon.cli:cli
